# SmartString

./: .gitignore  CMakeLists.txt  compileAndRun.sh  main.c
Interpreter/: Interpreter.h
Interpreter/JavaClass/: JavaClass.c  JavaClass.h
Interpreter/JavaFunction/: JavaFunction.c  JavaFunction.h
JavaExamples/: ex1.java  ex2.java  ex3.java
Service/: Service.c  Service.h  ServiceClass.c
SmartString/: SmartString.h
SmartString/String/: String.c  String.h
SmartString/StringArray/: StringArray.c  StringArray.h
SmartString/Tests/: StringTests.c  StringTests.h
